# Cpp-Embed-Mono

./: .clang-format  .gitignore  CMakeLists.txt
CSharpGameLib/: CSharpGameLib.sln
CSharpGameLib/CSharpGameLib/: CSharpGameLib.csproj
CSharpGameLib/CSharpGameLib/Properties/: AssemblyInfo.cs
CSharpGameLib/CSharpGameLib/src/: Console.cs  GameMain.cs  IGame.cs  RandomNum.cs  ScriptedGame.cs
EngineLib/: CMakeLists.txt
EngineLib/include/: Application.h  Base.h  Console.h  Engine.h  RandomNum.h
EngineLib/src/: Application.cpp  Console.cpp  Engine.cpp  RandomNum.cpp
GameExe/: CMakeLists.txt
GameExe/include/: Game.h  Mono.h
GameExe/src/: CSBind.cpp  CSBind.h  Game.cpp  Mono.cpp  main.cpp
